--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "url": "git://github.com/tmpvar/tirc.git"
   },
   "dependencies": {
-    "irc": "~0.3.4"
+    "irc": "~0.3.4",
+    "glob": "~3.1.10"
   },
   "devDependencies": {
-    "appjs" : "*"
+    "appjs": "*"
   },
-  "bin" : {
-    "tirc" : "bin/run.sh"
+  "bin": {
+    "tirc": "bin/run.sh"
   }
 }
